# TPDP-Dev-Tools

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TPDP-Dev-Tools.sln  licenses.txt
binedit/: CMakeLists.txt  binedit.cpp  binedit.h  binedit.vcxproj  binedit.vcxproj.filters  main.cpp
common/: console.cpp  console.h  endian.h  filesystem.cpp  filesystem.h  textconvert.cpp  textconvert.h  thread_pool.h  typedefs.h  util.h  version.h
diffgen/: CMakeLists.txt  diffgen.cpp  diffgen.h  diffgen.vcxproj  diffgen.vcxproj.filters  legacy.cpp  legacy.h  main.cpp  ziparchive.cpp  ziparchive.h
docs/: DollData.txt  DollMainGLoadFlag.txt  EVENT README.txt  EVS SCRIPT README.txt  MAP EDITOR README.txt  ObjGLoadFlag.txt  README.txt  SaveFile.txt  SkillData.txt  adding_new_puppets.txt  chp.txt  compatibility.txt  dod.txt  fmf.txt  mad.txt  obs.txt  puppet.txt
docs/file_formats/: DollData.txt  ObjFirstActivity.txt  ObjGLoadFlag.txt  README.txt  SkillData.txt  charaStandCheck.txt  chp.txt  dod.txt  fmf.txt  mad.txt  obs.txt  pts.txt  puppet.txt
editor/: Bitmap.cs  CMakeLists.txt  DesignWindow.cs  EventWindow.cs  EvsWindow.cs  Json.cs  MainWindow.Designer.cs  MainWindow.cs  MainWindow.resx  MapDisplay.cs  MapPanel.cs  MapWindow.cs  NewIDDialog.Designer.cs  NewIDDialog.cs  NewMapDialog.Designer.cs  NewMapDialog.cs  PatchDialog.Designer.cs  PatchDialog.cs  PatchDialog.resx  Program.cs  PuppetWindow.cs  RentalWindow.cs  ResizeDialog.Designer.cs  ResizeDialog.cs  ShiftDialog.Designer.cs  ShiftDialog.cs  SkillEditDialog.Designer.cs  SkillEditDialog.cs  SkillEditDialog.resx  SkillWindow.cs  TilesetDisplay.cs  TrainerWindow.cs
editor/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
libTPDP/: CMakeLists.txt  archive.cpp  archive.h  gamedata.cpp  gamedata.h  libTPDP.vcxproj  libTPDP.vcxproj.filters  libtpdp.h  puppet.cpp  puppet.h  savefile.cpp  savefile.h
patcher/: CMakeLists.txt  Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs  patcher.csproj
patcher/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
